src/service/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: speech-api
  name: speech-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: speech-api
  template:
    metadata:
      labels:
        run: speech-api
    spec:
      nodeSelector:
        cloud.google.com/gke-nodepool: master-pool
      containers:
        - name: speech-api
          image: gcr.io/mythical-runner-203817/speech-api:v1.96
          ports:
            - containerPort: 8000
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthy
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 15
