src/service/ingress.yaml
# Learn more / inspired by:
# https://cloud.google.com/kubernetes-engine/docs/tutorials/http-balancer
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: speech-api-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "speech-api-ip-v2"
spec:
  backend:
    serviceName: speech-api
    servicePort: 8000
